CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

ADD_SUBDIRECTORY(TinyXml2)
ADD_SUBDIRECTORY(glew)
ADD_SUBDIRECTORY(SDL2)
ADD_SUBDIRECTORY(SDL2plus)
ADD_SUBDIRECTORY(OVR)
ADD_SUBDIRECTORY(tinyobjloader)
ADD_SUBDIRECTORY(openal)
ADD_SUBDIRECTORY(glm)
ADD_SUBDIRECTORY(soil2)
ADD_SUBDIRECTORY(GLplus)
ADD_SUBDIRECTORY(GLmesh)
ADD_SUBDIRECTORY(lua)
ADD_SUBDIRECTORY(game)
