CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(soil2 C)

INCLUDE_DIRECTORIES(include)
FILE(GLOB SOIL2_SOURCES src/SOIL2/*.c)

# I hate MSVC
if(MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
    SET_SOURCE_FILES_PROPERTIES(${SOIL2_SOURCES} PROPERTIES LANGUAGE CXX)
endif()

ADD_LIBRARY(soil2 STATIC ${SOIL2_SOURCES})
